Fixed transition when views where too small (web app)

--- a/docs/_sass/app.scss
+++ b/docs/_sass/app.scss
@@ -69,9 +69,9 @@ a {
 	width: calc(100% - 100px);
 	background-color: white;
 	top: 150px;
+	min-height: calc(100vh - 150px);
 	display: flex;
 	justify-content: center;
-	align-items: center;
 	flex-direction: row;
 	flex-wrap: wrap;
 	padding-left: 50px;
@@ -172,6 +172,7 @@ a {
 .new {
 	position: absolute;
 	top: 150px;
+	min-height: calc(100vh - 150px);
 	background-color: white;
 	width: 100%;
 
